--- a/ZenithClientSite/src/app/user/register/register.component.html
+++ b/ZenithClientSite/src/app/user/register/register.component.html
@@ -1,10 +1,22 @@
-
-<div style="text-align: center">
-  <h3>
-    Register Works!
-  </h3>
-  <p>
-    Next to get working
-  </p>
+<div>
+  <h3 style="text-align: center">Register works!</h3>
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="username">Username: </label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="username"  placeholder="Username" [(ngModel)]="Username" [ngModelOptions]="{standalone: true}">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="password">Password: </label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" id="password" placeholder="Password" [(ngModel)]="Password" [ngModelOptions]="{standalone: true}">
+      </div>
+    </div>
+    <div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <button class="btn btn-default" (click)="register(Username, Password);">Register</button>
+      </div>
+    </div>
+  </form>
 </div>
-
