--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -16,7 +16,7 @@
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
         <button class="btn btn-default" (click)="login(Username, Password);">Login</button>
-        <button class="btn btn-default" (click)="print()">Log</button>
+        <!--<button class="btn btn-default" (click)="print()">Log</button>-->
       </div>
     </div>
   </form>
